$Id: ChangeLog,v 1.48 2008/07/04 10:55:37 tho Exp $

ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html

LibU x.y.z:
	- [log] u_log_set_{lock,unlock} added to setup locking callbacks (needed on 
	  multi-threading environments)
	- [configure] added --no_docs and --do_test configure flags
	- [array] dynamic array module added (can be disabled via --no_array
	  configure argument)
	- [list] u_list_insert and u_list_del_n added
	- [config] u_config_print_to_fp added
	- [configure] netinet/{tcp,in}.h and sys/socket.h tests
	- [net] do not include winsock.h
	- [config] u_config_load_from_buf and u_config_save_to_buf added
	- [config] drivers can set a callback function to resolve include filenames
	- [config] load from opaque data sources (u_config_load_from_drv)
	- [config] include directive support
	- [config] example/config/uconfig program added
	- [misc/net] moved u_accept from misc to net
	- [pwd] fix a parser problem with GCC 4.2.3
	- [headers] cleanup
	- [misc] u_path_snprintf memmove fix
	- [list] memory leak fix
	- [carpal] *_err_rcif() family macros added

LibU 1.2.0:
	- [list] added new module for dynamic lists handling (wrapper around
	  TAILQ_ macros), can be disabled via --no_list configuration argument
	- [pwd] added new module for simple password authentication, can be
	  disabled via --no_pwd configuration argument 
	- [fs] added new module with u_move, u_copy and u_remove interfaces,
	  can be disabled via --no_fs configuration argument 
	- [config] u_config_set_value's now in the public interface
	- [config] u_config_get_child_n can return anonymous keys
	- [hmap] fix compilation error with GCC 2.95

LibU 1.1.0:
	- [missing, misc] windows mingw fixes
	- [hmap] u_hmap_foreach_keyval() function added (by Aurelio Colosimo)
	- [log] u_strerror_r fix to make it working on 64bit platforms
	- [carpal] dbg_if{,m}() fix

LibU 1.0.0:
	- [hmap] module rework: implemented linear probing and array resizing based